Fixes Bug 691771, the "known media" table was terminated with a special incomplete sentinnel to indicate the end of the list.  Later code was added to search the table for different fields not initialized by the odd sentinnel.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11907 a1074d23-0009-0410-80fe-cf8c14f379e6